docs: add comprehensive cookbook and improve documentation structure (v0.1.1)
  Based on real-world feedback from the nano-scorm project, this release adds
  extensive documentation to address common pain points without any code changes.

  Added:
  - Cookbook section with 5 practical guides:
    - Basic pipeline patterns with pipe operator
    - Dependency injection using the deps parameter
    - Error handling strategies (exceptions vs results)
    - Testing patterns for async bricks
    - Architecture decisions (composition vs inheritance)
  - Complete example scripts demonstrating each pattern
  - Roadmap based on user feedback with granular versioning plan
  - Semantic versioning tooling (Taskfile.semver.yml)

  Changed:
  - Reorganized documentation structure (quarto/ → docs/quarto/)
  - Enhanced navigation with prominent cookbook section

  This release directly addresses the feedback: "The agent specifically asked
  for cookbook-style examples" and confusion around deps parameter usage and
  error handling patterns.

  Closes #feedback-from-nano-scorm

--- a/docs/quarto/_quarto.yml
+++ b/docs/quarto/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: Tutorial
       - href: sdk-guide.qmd
         text: SDK Guide
+      - href: cookbook/index.qmd
+        text: Cookbook
       - href: roadmap.qmd
         text: Roadmap
       - text: "More"
@@ -35,6 +37,14 @@ website:
           - tutorial.qmd
           - task-system.qmd
           - distribution.qmd
+      - section: "Cookbook"
+        contents:
+          - cookbook/index.qmd
+          - cookbook/basic-pipeline.qmd
+          - cookbook/dependency-injection.qmd
+          - cookbook/error-handling.qmd
+          - cookbook/testing-bricks.qmd
+          - cookbook/composition-patterns.qmd
       - section: "Building Systems"
         contents:
           - sdk-guide.qmd
