refactor: reorganize task system and complete pipe operator migration
- Move all Taskfile*.yml to taskfiles/ directory for better organization
- Create scripts/ directory with common utilities (find-claude.sh, run-claude.sh)
- Complete migration from | to >> operator in all documentation
- Update __or__ to __rshift__ method references throughout docs
- Fix Mermaid diagram rendering in architecture-diagrams.qmd
- Enhance Claude integration with verbose mode support
- Apply DRY principles to task configuration

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,10 +11,11 @@ vars:
     sh: echo $HOME
 
 includes:
-  build: ./Taskfile.build.yml
-  dev: ./Taskfile.dev.yml
-  version: ./Taskfile.version.yml
-  docs: ./Taskfile.docs.yml
+  docs: ./taskfiles/Taskfile.docs.yml
+  build: ./taskfiles/Taskfile.build.yml
+  version: ./taskfiles/Taskfile.version.yml
+  dev: ./taskfiles/Taskfile.dev.yml
+  workflow: ./taskfiles/Taskfile.workflows.yml
 
 tasks:
   default:
