feat(tasks): add atomic commit workflow tasks
- Create Taskfile.atomic.yml with comprehensive atomic commit workflows
- Add tasks for planning, analyzing, staging, committing, and validating
- Integrate nanobrick implementation with graceful fallbacks
- Include atomic taskfile in main Taskfile.yml
- Support both Claude CLI and manual workflows

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,6 +17,9 @@ includes:
   dev: ./taskfiles/Taskfile.dev.yml
   workflow: ./taskfiles/Taskfile.workflows.yml
   agentic: ./taskfiles/Taskfile.agentic.yml
+  atomic:
+    taskfile: ./taskfiles/Taskfile.atomic.yml
+    dir: '{{.ROOT_DIR}}'
 
 tasks:
   default:
