docs(quarto): add git cheat sheet to navigation
Updated Quarto configuration to include the git cheat sheet in the
documentation navigation structure.

--- a/docs/quarto/_quarto.yml
+++ b/docs/quarto/_quarto.yml
@@ -112,6 +112,9 @@ website:
       - section: "Claude Code"
         contents:
           - claude-code.qmd
+      - section: "Git Cheat Sheet"
+        contents:
+          - git-cheat-sheet.qmd
 
 format:
   html:
